modify landing page, remove footer, corrected landing css

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -11,7 +11,7 @@ background: linear-gradient(to right, #F27121, #E94057, #8A2387); /* W3C, IE 10+
 }
 
 .container{
-    padding-top: 100;
+    padding-top: 35vh;
 }
 
 
