--- a/views/photos.ejs
+++ b/views/photos.ejs
@@ -1,7 +1,71 @@
 <% include ../partials/header %>
-<h>PHOTO GALLERY</h>
-<br>
 
-<a href="/">GO TO HOME</a>
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+    <h1 class="display-4">Welcome to <i class="fas fa-camera-retro"></i> PhotoDiary</h1>
+    <p class="lead">Submit your photos now and let the world explore it.</p>
+    <a class="btn btn-md btn-success" href="#">Submit Photo</a>
+  </div>
+</div>
+
+<div class="container">
+   <div class="row text-center" style="display: flex; flex-wrap: wrap;">
+        <div class="col-md-3 col-sm-6 imageholder">
+            <div class="thumbnail"> 
+            <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=79f96121806d64f986dc5e5d9308afb1&auto=format&fit=crop&w=500&q=60" >
+            <div class="caption">
+            <h5>Elappara</h5>
+            </div>
+            <p>
+            <a href="/photos" class="btn btn-sm btn-dark" >View Diary</a>
+            </p>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 imageholder">
+            <div class="thumbnail"> 
+            <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=79f96121806d64f986dc5e5d9308afb1&auto=format&fit=crop&w=500&q=60" >
+            <div class="caption">
+            <h5>Elappara</h5>
+            </div>
+            <p>
+            <a href="/photos" class="btn btn-sm btn-dark" >View Diary</a>
+            </p>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 imageholder">
+            <div class="thumbnail"> 
+            <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=79f96121806d64f986dc5e5d9308afb1&auto=format&fit=crop&w=500&q=60" >
+            <div class="caption">
+            <h5>Elappara</h5>
+            </div>
+            <p>
+            <a href="/photos" class="btn btn-sm btn-dark" >View Diary</a>
+            </p>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 imageholder">
+            <div class="thumbnail"> 
+            <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=79f96121806d64f986dc5e5d9308afb1&auto=format&fit=crop&w=500&q=60" >
+            <div class="caption">
+            <h5>Elappara</h5>
+            </div>
+            <p>
+            <a href="/photos" class="btn btn-sm btn-dark" >View Diary</a>
+            </p>
+            </div>
+        </div>
+        <div class="col-md-3 col-sm-6 imageholder">
+            <div class="thumbnail"> 
+            <img src="https://images.unsplash.com/photo-1469474968028-56623f02e42e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=79f96121806d64f986dc5e5d9308afb1&auto=format&fit=crop&w=500&q=60" >
+            <div class="caption">
+            <h5>Elappara</h5>
+            </div>
+            <p>
+            <a href="/photos" class="btn btn-sm btn-dark" >View Diary</a>
+            </p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <% include ../partials/footer %>
