add new photo form page and style css newForm. Add new and create route in app.js for photos

--- a/views/photos.ejs
+++ b/views/photos.ejs
@@ -4,7 +4,7 @@
   <div class="container">
     <h1 class="display-4">Welcome to <i class="fas fa-camera-retro"></i> PhotoDiary</h1>
     <p class="lead">Submit your photos now and let the world explore it.</p>
-    <a class="btn btn-md btn-success" href="#">Submit Photo</a>
+    <a class="btn btn-md btn-success" href="/photos/new">Submit Photo</a>
   </div>
 </div>
 
