--- a/views/new.ejs
+++ b/views/new.ejs
@@ -10,7 +10,7 @@
           </div>
           <div class="form-group">
             <label for="imageURL">Image URL</label>
-            <input type="text" class="form-control" name="photo[image]" placeholder="Password">
+            <input type="text" class="form-control" name="photo[image]" placeholder="Image URL. We will enahance this app to upload photo in the future!">
           </div>
           <div class="form-group">
            <label for="description">Description</label>
