--- a/views/photos.ejs
+++ b/views/photos.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class="jumbotron jumbotron-fluid">
+<div class="jumbotron jumbotron-fluid" id="photosJumbotron">
   <div class="container">
     <h1 class="display-4">Welcome to <i class="fas fa-camera-retro"></i> PhotoDiary</h1>
     <p class="lead">Submit your photos now and let the world explore it.</p>
