--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -41,3 +41,8 @@ nav {
     
     margin: 15px 5px;
 }
+
+#photosJumbotron{
+    background-image: url("https://images.unsplash.com/photo-1517273192281-217714988f61?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ea99430b79aa449b0a16b0dd8d34eb54&auto=format&fit=crop&w=1489&q=80");
+    background-size: cover;
+}
