--- a/views/show.ejs
+++ b/views/show.ejs
@@ -9,6 +9,12 @@
             <div class="thumbnail">
                 <img src="<%= Photo.image%>" class="img-fluid">
                 <div class="caption-full" id="imageDescription">
+                    <div class="float-right">
+                    <a class="btn btn-outline-success btn-sm" href="/photos/<%= Photo._id %>/edit">Edit</a>
+                    <form method="POST" action="/photos/<%= Photo._id %>?_method=DELETE" id="deletePhoto">
+                        <button class="btn btn-outline-danger btn-sm">Delete</button>
+                    </form>
+                    </div>
                     <h4>Diary:</h4>
                     <p><%= Photo.desc %></p>
                 </div>
