--- a/views/photos/new.ejs
+++ b/views/photos/new.ejs
@@ -1,26 +1,26 @@
-<% include ../partials/header %>
+<% include ../../partials/header %>
 
 
-     <div class="jumbotron jumbotron-fluid text-center" id="editJumbotron">
+    <div class="jumbotron jumbotron-fluid text-center" id="newJumbotron">
           <div class="container">
-            <h1 class="display-4">Edit Your <i class="fas fa-camera-retro"></i> PhotoDiary</h1>
+            <h1 class="display-4">Submit Your <i class="fas fa-camera-retro"></i> PhotoDiary</h1>
           </div>
         </div>
-    <div class="container">
-    <div class="editForm">
-        <form method="POST" action="/photos/<%= Photo._id%>?_method=PUT">
+        <div class="container">
+    <div class="newForm">
+        <form method="POST" action="/photos">
           <div class="form-group">
             <label for="title">Title</label>
-            <input type="text" class="form-control" id="title" name="photo[title]" value="<%=Photo.title%>">
+            <input type="text" class="form-control" id="title" name="photo[title]" placeholder="Enter Title">
             <small id="titleHelp" class="form-text text-muted">Enter a catchy title for your amazing photo diary!</small>
           </div>
           <div class="form-group">
             <label for="imageURL">Image URL</label>
-            <input type="text" class="form-control" name="photo[image]" value="<%= Photo.image %>">
+            <input type="text" class="form-control" name="photo[image]" placeholder="Image URL. We will enahance this app to upload photo in the future!">
           </div>
           <div class="form-group">
            <label for="description">Description</label>
-           <textarea class="form-control" name="photo[desc]" rows="3"><%= Photo.desc%></textarea>
+           <textarea class="form-control" name="photo[desc]" rows="3"></textarea>
            <small id="descHelp" class="form-text text-muted">Share the story behind this photo!</small>
          </div>
           <button type="submit" class="btn btn-primary">Submit</button>
@@ -28,4 +28,4 @@
     </div>
 </div>
 
-<% include ../partials/footer %>
+<% include ../../partials/footer %>
