--- a/views/photos/photos.ejs
+++ b/views/photos/photos.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/header %>
+<% include ../../partials/header %>
 
 <div class="jumbotron jumbotron-fluid" id="photosJumbotron">
   <div class="container">
@@ -22,4 +22,4 @@
     </div>
 </div>
 
-<% include ../partials/footer %>
+<% include ../../partials/footer %>
