--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -18,13 +18,13 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Sign Up</a>
+        <a class="nav-link" href="/register">Sign Up</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sign In</a>
+        <a class="nav-link" href="/login">Sign In</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="/logout">Logout</a>
       </li>
     </ul>
   </div>
