--- a/public/stylesheets/newForm.css
+++ b/public/stylesheets/newForm.css
@@ -14,6 +14,13 @@
     
 }
 
+#registerJumbotron {
+    background-image: url("https://images.unsplash.com/photo-1509225770129-fbcf8a696c0b?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5cf0190f5eca74d8be2aba992a07402b&auto=format&fit=crop&w=1959&q=80");
+    background-size: cover;
+    color: white;
+}
+
+
 #deletePhoto {
     display: inline;
 }
