add connect-flash for flash messages in app.js and header file

--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -29,4 +29,11 @@
     </ul>
   </div>
 </nav>
-        
+<div class="container-fluid">
+  <% if(error && error.length > 0){%>
+        <div class="alert alert-danger" role="alert"><%= error%></div>
+    <% } %>
+    <% if(success && success.length > 0){%>
+    <div class="alert alert-success" role="alert"><%= success%></div>
+    <% } %>
+</div>
