--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -29,11 +29,11 @@
     </ul>
   </div>
 </nav>
-<div class="container-fluid">
+<div class="container-fluid" style="padding: 0;">
   <% if(error && error.length > 0){%>
-        <div class="alert alert-danger" role="alert"><%= error%></div>
+        <div class="alert alert-danger" role="alert" style="margin: 0;"><%= error%></div>
     <% } %>
     <% if(success && success.length > 0){%>
-    <div class="alert alert-success" role="alert"><%= success%></div>
+    <div class="alert alert-success" role="alert" style="margin: 0;"><%= success%></div>
     <% } %>
 </div>
