add passport authentication in login register and add logout route with passport

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -11,15 +11,15 @@
         <form method="POST" action="/register">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="title" name="user[name]" placeholder="Enter Username" required>
+            <input type="text" class="form-control" id="title" name="username" placeholder="Enter Username" required>
             <small id="usernameHelp" class="form-text text-muted">Enter a username for your account. This will be used for login.</small>
           </div>
           <div class="form-group">
             <label for="Password">Password</label>
-            <input type="password" class="form-control" name="user[password]" placeholder="Enter a password for your account" required>
+            <input type="password" class="form-control" name="password" placeholder="Enter a password for your account" required>
             <small id="passwordHelp" class="form-text text-muted">Make sure to give a strong alphanumeric password.</small>
           </div>
-          <button id="createButton" type="submit" class="btn btn-outline-info btn-block">Create Account</button>
+          <button id="createButton" type="submit" class="btn btn-dark btn-block">Create Account</button>
         </form>
     </div>
 </div>
