--- a/public/stylesheets/newForm.css
+++ b/public/stylesheets/newForm.css
@@ -7,7 +7,7 @@
 }
 
 
-#editJumbotron, #newJumbotron {
+#editJumbotron, #newJumbotron, #loginJumbotron {
 
     background-image: url("https://images.unsplash.com/photo-1508012340316-cdf9d309cea0?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=dc8d6b5aa44eb38e22ce51f5a98d0e07&auto=format&fit=crop&w=890&q=80");
     background-size: cover;
@@ -19,7 +19,6 @@
     background-size: cover;
     color: white;
 }
-
 
 #deletePhoto {
     display: inline;
