--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -17,15 +17,21 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
+      <% if(!currentUser){%>
       <li class="nav-item">
         <a class="nav-link" href="/register">Sign Up</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/login">Sign In</a>
       </li>
+      <% }else{ %>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Welcome <%= currentUser.username %></a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
       </li>
+      <% } %>
     </ul>
   </div>
 </nav>
