correct passport login route error

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -11,12 +11,12 @@
         <form method="POST" action="/login">
           <div class="form-group">
             <label for="username">Username</label>
-            <input type="text" class="form-control" id="title" name="user[name]" placeholder="Enter Username" required>
+            <input type="text" class="form-control" id="title" name="username" placeholder="Enter Username" required>
             <small id="usernameHelp" class="form-text text-muted">Enter the Username of your account.</small>
           </div>
           <div class="form-group">
             <label for="Password">Password</label>
-            <input type="password" class="form-control" name="user[password]" placeholder="Enter your password" required>
+            <input type="password" class="form-control" name="password" placeholder="Enter your password" required>
             <small id="passwordHelp" class="form-text text-muted">Enter the Password of your account.</small>
           </div>
           <button id="createButton" type="submit" class="btn btn-warning btn-block">Login to Your Account</button>
