--- a/partials/header.ejs
+++ b/partials/header.ejs
@@ -26,7 +26,7 @@
       </li>
       <% }else{ %>
       <li class="nav-item">
-        <a class="nav-link" href="#">Welcome <%= currentUser.username %></a>
+        <a class="nav-link" href="#">Hi <%= currentUser.username %></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/logout">Logout</a>
