--- a/views/photos/new.ejs
+++ b/views/photos/new.ejs
@@ -11,16 +11,16 @@
         <form method="POST" action="/photos">
           <div class="form-group">
             <label for="title">Title</label>
-            <input type="text" class="form-control" id="title" name="photo[title]" placeholder="Enter Title">
+            <input type="text" class="form-control" id="title" name="title" placeholder="Enter Title">
             <small id="titleHelp" class="form-text text-muted">Enter a catchy title for your amazing photo diary!</small>
           </div>
           <div class="form-group">
             <label for="imageURL">Image URL</label>
-            <input type="text" class="form-control" name="photo[image]" placeholder="Image URL. We will enahance this app to upload photo in the future!">
+            <input type="text" class="form-control" name="image" placeholder="Image URL. We will enahance this app to upload photo in the future!">
           </div>
           <div class="form-group">
            <label for="description">Description</label>
-           <textarea class="form-control" name="photo[desc]" rows="3"></textarea>
+           <textarea class="form-control" name="desc" rows="3"></textarea>
            <small id="descHelp" class="form-text text-muted">Share the story behind this photo!</small>
          </div>
           <button type="submit" class="btn btn-primary">Submit</button>
