change css login submit-photo and register pages

--- a/views/photos/new.ejs
+++ b/views/photos/new.ejs
@@ -23,7 +23,7 @@
            <textarea class="form-control" name="desc" rows="3"></textarea>
            <small id="descHelp" class="form-text text-muted">Share the story behind this photo!</small>
          </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-primary btn-block">Submit Your Photo</button>
         </form>
     </div>
 </div>
