--- a/public/stylesheets/newForm.css
+++ b/public/stylesheets/newForm.css
@@ -1,8 +1,9 @@
 .newForm, .editForm {
     
-    padding-top: 10px;
-    max-width: 600px;
+    padding: 50px;
+    max-width: 700px;
     margin: auto;
+    border: solid rgba(0,0,0,0.2) 1px;
     
 }
 
