--- a/views/photos/show.ejs
+++ b/views/photos/show.ejs
@@ -25,7 +25,7 @@
         <div class="col-md-3" id="description" >
             <div class="list-group">
                 <li class="list-group-item active">Captured By</li>
-                <li class="list-group-item">Sanjay Sanjeev</li>
+                <li class="list-group-item"><%= Photo.author.username %></li>
                 <li class="list-group-item"><%=Photo.date.toDateString()%></li>
             </div>
         </div>
