--- a/views/photos/show.ejs
+++ b/views/photos/show.ejs
@@ -27,6 +27,7 @@
                 <li class="list-group-item active">Captured By</li>
                 <li class="list-group-item"><%= Photo.author.username %></li>
                 <li class="list-group-item"><%=Photo.date.toDateString()%></li>
+                <li class="list-group-item"><a href="/photos" class="btn btn-info btn-block">Back to Photos</a></li>
             </div>
         </div>
     </div>
