add comment box for photos and styling

--- a/public/stylesheets/newForm.css
+++ b/public/stylesheets/newForm.css
@@ -7,6 +7,10 @@
     
 }
 
+#commentButton {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
 #editJumbotron, #newJumbotron, #loginJumbotron {
 
