--- a/views/photos/show.ejs
+++ b/views/photos/show.ejs
@@ -21,13 +21,30 @@
                     <p><%= Photo.desc %></p>
                 </div>
             </div>
+            <div id="commentButton" class="text-right">
+                <a href="" class="btn btn-warning btn-sm">Add New Comment</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                 <strong>Comments</strong>
+                </div>
+                <div class="card-body">
+                <h6 class="card-title">
+                    Sanjay
+                    <a href="#" class="btn btn-outline-danger btn-sm float-right" style="margin: 2px;">Delete</a>
+                    <a href="#" class="btn btn-outline-success btn-sm float-right" style="margin: 2px;">Edit</a>
+                    
+                </h6>
+                <p class="card-text"><em>With supporting text below as a natural lead-in to additional content.</em></p>
+              </div>
+            </div>
         </div>
         <div class="col-md-3" id="description" >
             <div class="list-group">
                 <li class="list-group-item active">Captured By</li>
                 <li class="list-group-item"><%= Photo.author.username %></li>
                 <li class="list-group-item"><%=Photo.date.toDateString()%></li>
-                <li class="list-group-item"><a href="/photos" class="btn btn-info btn-block">Back to Photos</a></li>
+                <a href="/photos" class="btn btn-info btn-block">Back to Photos</a>
             </div>
         </div>
     </div>
