--- a/views/photos/show.ejs
+++ b/views/photos/show.ejs
@@ -26,12 +26,13 @@
                  <strong>Comments</strong><a href="/photos/<%=Photo._id%>/comments/new" class="btn btn-warning btn-sm float-right">Add New Comment</a>
                 </div>
                 <% Photo.comments.forEach(function(comment){ %>
-                <div class="card-body">
-                    <h6 class="card-title">
+                <div class="card-body" style="border: 1px solid rgba(0,0,0,0.1);">
+                    <h6 class="card-title" >
                         <%= comment.author.username %>
+                        <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
                         <a href="#" class="btn btn-outline-danger btn-sm float-right" style="margin: 2px;">Delete</a>
-                        <a href="#" class="btn btn-outline-success btn-sm float-right" style="margin: 2px;">Edit</a>
-                        
+                        <a href="/photos/<%= Photo._id %>/comments/<%= comment._id %>/edit" class="btn btn-outline-success btn-sm float-right" style="margin: 2px;">Edit</a>
+                        <% } %>
                     </h6>
                     <p class="card-text"><em><%= comment.text %></em></p>
                 </div>
